<resources>
    <string name="app_name">Shpora2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Шпаргалка</string>
    <string name="trig_f">Тригонометрические тождества</string>
    <string name="f2">Формулы сокращенного умножения</string>
    <string name="f3">Простейшие тригонометрические уравнения</string>
    <string name="f4">Логарифмы</string>
    <string name="f5">Формулы приведения</string>
    <string name="f6">Произведение тригонометрических функций</string>
    <string name="title_activity_f1">f1</string>
    <string name="title_activity_f2">f2</string>
    <string name="title_activity_f3">f3</string>
    <string name="title_activity_f4">f4</string>
    <string name="title_activity_f5">f5</string>
    <string name="title_activity_f6">f6</string>
</resources>